fix alignment when additional plugins add entries in admin panel

--- a/assets/mikio.less
+++ b/assets/mikio.less
@@ -1863,6 +1863,12 @@ pre {
     }
 
     div.ui-admin {
+        display: flex;
+        flex-direction: column;
+
+        #admin__version {
+            font-size: 80%;
+        }
 
         ul.admin_tasks,
         ul.admin_plugins {
